crates/swc_ecma_parser/tests/flow/type_guards/invalid/keyword_as_param.js
type T = (in_: any) => in is number;
